Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -8,7 +8,16 @@
 </head>
 <body>
 
-  <!-- Write your HTML here -->
-  
+  <table>
+      <tb>
+        <th>Name</th>
+        <th>Phone Number</th>
+        <th>Accompany guest</th>
+      </tb>
+      <tb></tb>
+      <tb></tb>
+      <tb></tb>
+    </table>
+
 </body>
 </html>
