Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -9,15 +9,18 @@
 <body>
 
   <table>
-      <tb>
-        <th>Name</th>
-        <th>Phone Number</th>
-        <th>Accompany guest</th>
-      </tb>
-      <tb></tb>
-      <tb></tb>
-      <tb></tb>
-    </table>
-
+    <tr>
+      <th>Name</th>
+      <th>Phone Number</th>
+      <th>preference</th>
+    </tr>
+    <tr>
+      <td>Gianluca</tb>
+        <td>01920092</tb>
+          <td>Cheese</tb>
+    </tr>
+    <tr></tr>
+    <tr></tr>
+  </table>
 </body>
 </html>
