Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -9,18 +9,26 @@
 <body>
 
   <table>
-    <tr>
-      <th>Name</th>
-      <th>Phone Number</th>
-      <th>preference</th>
-    </tr>
-    <tr>
-      <td>Gianluca</tb>
-        <td>01920092</tb>
-          <td>Cheese</tb>
-    </tr>
-    <tr></tr>
-    <tr></tr>
-  </table>
+      <tr>
+        <th>Name</th>
+        <th>Phone Number</th>
+        <th>preference</th>
+      </tr>
+      <tr>
+        <td>Gianluca</tb>
+          <td>01920092</tb>
+            <td>Cheese</tb>
+      </tr>
+      <tr>
+        <td>Franco</td>
+        <td>03001394912</td>
+        <td>spaghetti</td>
+      </tr>
+      <tr>
+        <td>Carlo</td>
+        <td>042910213</td>
+        <td>fettucine</td>
+      </tr>
+    </table>
 </body>
 </html>
