Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -10,24 +10,30 @@
 
   <table>
       <tr>
-        <th>Name</th>
-        <th>Phone Number</th>
-        <th>preference</th>
+        <th>City</th>
+        <th>State</th>
+        <th>2017
+        estimate</th>
       </tr>
       <tr>
-        <td>Gianluca</tb>
-          <td>01920092</tb>
-            <td>Cheese</tb>
+        <td>New York</tb>
+          <td>New York</tb>
+            <td>8,622,698</tb>
       </tr>
       <tr>
-        <td>Franco</td>
-        <td>03001394912</td>
-        <td>spaghetti</td>
+        <td>Los Angeles</td>
+        <td>California</td>
+        <td>3,999,759</td>
       </tr>
       <tr>
-        <td>Carlo</td>
-        <td>042910213</td>
-        <td>fettucine</td>
+        <td>Chicago</td>
+        <td>Illinois</td>
+        <td>2,716,450</td>
+      </tr>
+      <tr>
+        <td>Huston</td>
+        <td>Texas</td>
+        <td>2,312,717</td>
       </tr>
     </table>
 </body>
