--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <th>2017 estimate</th>
       </tr>
       <tr>
-      <td>New York</tb>
-      <td>New York</tb>
-      <td>8,622,698</tb>
+      <td>New York</td>
+      <td>New York</td>
+      <td>8,622,698</td>
       </tr>
       <tr>
         <td>Los Angeles</td>
